--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,19 +10,75 @@
 }
 
 .image-divs-container {
-    flex: 1;
+    display: flex;
+    flex-direction: row;
 }
 
 .triangle-display {
+    background-color: black;
+    height: 300px;
+    width: 300px;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.triangle-display-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.triangle-display-item {
+    background-color: white;
     border-width: 1px;
     border-color: black;
     border-style: solid;
+    border-radius: 25px;
+    width: 50px;
+    height: 50px;
+}    
+
+.triangle-text {
+    padding-left: 19px;
+    padding-top: 13px;
+    font-size: 20px;
 }
 
 .tree-display {
+    background-color: green;
+    height: 300px;
+    width: 300px;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.tree-display-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+}
+
+.tree-display-item {
+    background-color: white;
     border-width: 1px;
     border-color: black;
     border-style: solid;
+    flex: 1;
+}    
+
+.tree-text {
+    font-size: 20px;
 }
 
 .text-divs-container {
